// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-numbers should be able to extract en 1`] = `
Object {
  "en": Object {
    "currency": Object {
      "latn": Object {
        "accounting": "¤#,##0.00;(¤#,##0.00)",
        "currencySpacing": Object {
          "afterInsertBetween": " ",
          "beforeInsertBetween": " ",
        },
        "short": Object {
          "1000": Object {
            "other": "¤0K",
          },
          "10000": Object {
            "other": "¤00K",
          },
          "100000": Object {
            "other": "¤000K",
          },
          "1000000": Object {
            "other": "¤0M",
          },
          "10000000": Object {
            "other": "¤00M",
          },
          "100000000": Object {
            "other": "¤000M",
          },
          "1000000000": Object {
            "other": "¤0B",
          },
          "10000000000": Object {
            "other": "¤00B",
          },
          "100000000000": Object {
            "other": "¤000B",
          },
          "1000000000000": Object {
            "other": "¤0T",
          },
          "10000000000000": Object {
            "other": "¤00T",
          },
          "100000000000000": Object {
            "other": "¤000T",
          },
        },
        "standard": "¤#,##0.00",
        "unitPattern": "{0} {1}",
      },
    },
    "decimal": Object {
      "latn": Object {
        "long": Object {
          "1000": Object {
            "other": "0 thousand",
          },
          "10000": Object {
            "other": "00 thousand",
          },
          "100000": Object {
            "other": "000 thousand",
          },
          "1000000": Object {
            "other": "0 million",
          },
          "10000000": Object {
            "other": "00 million",
          },
          "100000000": Object {
            "other": "000 million",
          },
          "1000000000": Object {
            "other": "0 billion",
          },
          "10000000000": Object {
            "other": "00 billion",
          },
          "100000000000": Object {
            "other": "000 billion",
          },
          "1000000000000": Object {
            "other": "0 trillion",
          },
          "10000000000000": Object {
            "other": "00 trillion",
          },
          "100000000000000": Object {
            "other": "000 trillion",
          },
        },
        "short": Object {
          "1000": Object {
            "other": "0K",
          },
          "10000": Object {
            "other": "00K",
          },
          "100000": Object {
            "other": "000K",
          },
          "1000000": Object {
            "other": "0M",
          },
          "10000000": Object {
            "other": "00M",
          },
          "100000000": Object {
            "other": "000M",
          },
          "1000000000": Object {
            "other": "0B",
          },
          "10000000000": Object {
            "other": "00B",
          },
          "100000000000": Object {
            "other": "000B",
          },
          "1000000000000": Object {
            "other": "0T",
          },
          "10000000000000": Object {
            "other": "00T",
          },
          "100000000000000": Object {
            "other": "000T",
          },
        },
      },
    },
    "nu": Array [
      "latn",
    ],
    "percent": Object {
      "latn": "#,##0%",
    },
    "symbols": Object {
      "latn": Object {
        "decimal": ".",
        "exponential": "E",
        "group": ",",
        "infinity": "∞",
        "list": ";",
        "minusSign": "-",
        "nan": "NaN",
        "perMille": "‰",
        "percentSign": "%",
        "plusSign": "+",
        "superscriptingExponent": "×",
        "timeSeparator": ":",
      },
    },
  },
}
`;

exports[`extract-numbers should be able to extract vi 1`] = `
Object {
  "vi": Object {
    "currency": Object {
      "latn": Object {
        "accounting": "#,##0.00 ¤",
        "currencySpacing": Object {
          "afterInsertBetween": " ",
          "beforeInsertBetween": " ",
        },
        "short": Object {
          "1000": Object {
            "other": "0 N ¤",
          },
          "10000": Object {
            "other": "00 N ¤",
          },
          "100000": Object {
            "other": "000 N ¤",
          },
          "1000000": Object {
            "other": "0 Tr ¤",
          },
          "10000000": Object {
            "other": "00 Tr ¤",
          },
          "100000000": Object {
            "other": "000 Tr ¤",
          },
          "1000000000": Object {
            "other": "0 T ¤",
          },
          "10000000000": Object {
            "other": "00 T ¤",
          },
          "100000000000": Object {
            "other": "000 T ¤",
          },
          "1000000000000": Object {
            "other": "0 NT ¤",
          },
          "10000000000000": Object {
            "other": "00 NT ¤",
          },
          "100000000000000": Object {
            "other": "000 NT ¤",
          },
        },
        "standard": "#,##0.00 ¤",
        "unitPattern": "{0} {1}",
      },
    },
    "decimal": Object {
      "latn": Object {
        "long": Object {
          "1000": Object {
            "other": "0 nghìn",
          },
          "10000": Object {
            "other": "00 nghìn",
          },
          "100000": Object {
            "other": "000 nghìn",
          },
          "1000000": Object {
            "other": "0 triệu",
          },
          "10000000": Object {
            "other": "00 triệu",
          },
          "100000000": Object {
            "other": "000 triệu",
          },
          "1000000000": Object {
            "other": "0 tỷ",
          },
          "10000000000": Object {
            "other": "00 tỷ",
          },
          "100000000000": Object {
            "other": "000 tỷ",
          },
          "1000000000000": Object {
            "other": "0 nghìn tỷ",
          },
          "10000000000000": Object {
            "other": "00 nghìn tỷ",
          },
          "100000000000000": Object {
            "other": "000 nghìn tỷ",
          },
        },
        "short": Object {
          "1000": Object {
            "other": "0 N",
          },
          "10000": Object {
            "other": "00 N",
          },
          "100000": Object {
            "other": "000 N",
          },
          "1000000": Object {
            "other": "0 Tr",
          },
          "10000000": Object {
            "other": "00 Tr",
          },
          "100000000": Object {
            "other": "000 Tr",
          },
          "1000000000": Object {
            "other": "0 T",
          },
          "10000000000": Object {
            "other": "00 T",
          },
          "100000000000": Object {
            "other": "000 T",
          },
          "1000000000000": Object {
            "other": "0 NT",
          },
          "10000000000000": Object {
            "other": "00 NT",
          },
          "100000000000000": Object {
            "other": "000 NT",
          },
        },
      },
    },
    "nu": Array [
      "latn",
    ],
    "percent": Object {
      "latn": "#,##0%",
    },
    "symbols": Object {
      "latn": Object {
        "decimal": ",",
        "exponential": "E",
        "group": ".",
        "infinity": "∞",
        "list": ";",
        "minusSign": "-",
        "nan": "NaN",
        "perMille": "‰",
        "percentSign": "%",
        "plusSign": "+",
        "superscriptingExponent": "×",
        "timeSeparator": ":",
      },
    },
  },
}
`;
